--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>COVID19</title>
+  <link rel="shortcut icon" href="pin.webp" type="image/x-icon">
+  <title>Covid-19</title>
 </head>
 <body>
   <nav>
     <h1 class="title">Reportes globales de Covid-19</h1>
-    <h2 class="subTitle"><a href="grafica.html">Grafica Global</a></h2>
-    <div id="newCases" class="newCases"></div>
+    <!-- <h2 class="subTitle"><a href="grafica.html">Grafica Global</a></h2> -->
+    <div id="newCases" class="newCases">
+      <p><span>Confirmados:</span></p>
+      <p><span>Recuperados:</span></p>
+      <p><span>Muertes:</span></p>
+    </div>
   </nav>
   
   <div class="map" id="map"></div>
